lagt till inlogg, secret path med cookie token, hämtar all artiklar i secret. ny logo

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -12,12 +12,21 @@ footer {
     margin-top: 2vh;
 }
 
+.topButt{
+    width: fit-content;
+    margin-top: 1vh;
+}
+
+footer div{
+    text-align: center;
+}
 
 .Pfooter a{
     color: black;
     text-decoration: none;
     font-weight: 600;
 }
+
 
 .Pfooter a:hover{
     text-decoration: underline;
