--- a/src/Header.css
+++ b/src/Header.css
@@ -8,6 +8,13 @@
     
 }
 
+.divButt{
+    position: absolute;
+    right: 2vw;
+    top: 0vh;
+    
+}
+
 .divImage{
     display: flex;
 }
@@ -15,10 +22,14 @@
 .divImage img{
     float: left
 }
-
-.divButt{
-    text-align: center;
+.loginButt{
+    float: right;
+    display: flex;
+    background-color:rgba(255, 255, 255, 0.685);
+    border: none;
+    cursor: 'pointer'
 }
+
 
 #aButt{
     text-decoration: none;
