--- a/src/secret.css
+++ b/src/secret.css
@@ -1,10 +1,14 @@
 .aArticles{
     color: black;
     text-decoration: none;
+    font-weight: 600;
 }
 
 .aArticles:hover{
-
+    font-weight: 900;
     color: lightgreen;
-    text-decoration: underline;
+}
+
+.pArticles{
+    font-size: smaller;
 }
